<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AnimalInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_data_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_image"
            android:layout_width="265dp"
            android:layout_height="265dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/animal_image_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_image" />

        <TextView
            android:id="@+id/tv_latin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_habitat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="start"
            android:text="@string/habitat_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fab_get_animal_info"
            app:layout_constraintTop_toBottomOf="@id/tv_latin_name" />

        <TextView
            android:id="@+id/tv_geo_range"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="start"
            android:text="@string/geo_range_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fab_get_animal_info"
            app:layout_constraintTop_toBottomOf="@id/tv_habitat" />

        <TextView
            android:id="@+id/tv_diet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="start"
            android:text="@string/diet_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fab_get_animal_info"
            app:layout_constraintTop_toBottomOf="@id/tv_geo_range" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="start"
            android:text="@string/animal_type_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fab_get_animal_info"
            app:layout_constraintTop_toBottomOf="@id/tv_diet" />

        <TextView
            android:id="@+id/tv_active_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="start"
            android:text="@string/active_time_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fab_get_animal_info"
            app:layout_constraintTop_toBottomOf="@id/tv_type" />

        <TextView
            android:id="@+id/tv_lifespan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="start"
            android:text="@string/lifespan_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fab_get_animal_info"
            app:layout_constraintTop_toBottomOf="@id/tv_active_time" />

        <TextView
            android:id="@+id/tv_length"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="start"
            android:text="@string/length_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fab_get_animal_info"
            app:layout_constraintTop_toBottomOf="@id/tv_lifespan" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="start"
            android:text="@string/weight_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fab_get_animal_info"
            app:layout_constraintTop_toBottomOf="@id/tv_length" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_get_animal_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/fab_description"
            android:src="@drawable/ic_refresh"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        android:padding="128dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
